syntax = "proto3";

package project;

message Project {
  string name = 1;
  string secretKey = 2;
}

message ProjectUpdate {
  string id = 1;
  optional string name = 2;
  string secretKey = 3;
}

message ProjectWithId {
  string id = 1;
  string name = 2;
  string secretKey = 3;
}

message ProjectId { string id = 1; }